correct spacing in the chracteristic graph

--- a/public/index.css
+++ b/public/index.css
@@ -206,7 +206,7 @@ hr {
     position: relative;
     white-space: nowrap;
     width: 80%;
-    background: lightgrey;
+    background: #e4e4e4;
     /* padding: 0px 12px; */
     margin: 10px 0px 0px 53px;
     top: 15px;
@@ -446,27 +446,31 @@ hr {
 .attribute-graph {
     margin: 30% 0px 0px 0px;
     position: relative;
-
 }
 
+/* the display: flex and flex: 1 attribute allow this outer bar to size itself flexibly to the child */
 .attr-outer {
     position: relative;
     white-space: nowrap;
     width: 100%;
-    /* height: 1rem; */
-    background: lightgrey;
+    background: #e4e4e4;
     /* padding: 0px 12px; */
     margin: 0px 0px 0px 53px;
     top: 15px;
     left: -25%;
+    overflow: hidden;
+    display: flex;
+    flex: 1;
+
 }
 
 /* the left amount is what will slide the triangle over */
 
 .attr-breakdown-comfort, .attr-breakdown-fit, .attr-breakdown-quality, .attr-breakdown-length, .attr-breakdown-size, .attr-breakdown-width {
     position: relative;
-    width: 10%;
+    width: 5%;
     z-index: 1;
+    height: 100%;
     /* left: 25%; */
 }
 
@@ -475,8 +479,29 @@ hr {
     /* display: block; */
     /* top: 100px; */
     z-index: 1;
+    margin: 20px 0px -10px 0px;
+    text-align: left;
+    font-weight: 300;
+    font-size: 14px;
+}
+
+.left-to-right-explanation {
+    position: relative;
     margin: 20px 0px -20px 0px;
     text-align: center;
+    font-weight: 300;
+    font-size: 14px;
+    margin: 15px 0px 0px 0px;
+    font-weight: 200;
+    font-size: 13px;
+}
+
+.too-small {
+    margin: 0px 30px 0px 0px;
+}
+
+.too-wide {
+    margin: 0px 0px 0px 30px;
 }
 
 
